--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  padding: 0 !important;
+}
+
 .anton-regular {
   font-family: "Anton", sans-serif;
 }
@@ -25,7 +29,6 @@
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
