feat(layout): enhance responsive design for Header component
Introduce responsive behavior for the Header component by adjusting styles and layout based on window width. This includes hiding navigation links and social icons on smaller screens, modifying header positioning, and updating border and shadow styles for better visual consistency across devices. Additionally, CSS variables for clip-path properties are added to improve maintainability and responsiveness in the ContactSection.

--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,33 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --clip-right-top: 93%;
+  --clip-angle-top: 10%;
+  --clip-left-bottom: 7%;
+  --clip-angle-bottom: 90%;
 }
 
 #root {
   padding: 0 !important;
+}
+
+@media (max-width: 768px) {
+  :root {
+    --clip-right-top: 92%;
+    --clip-angle-top: 10%;
+    --clip-left-bottom: 8%;
+    --clip-angle-bottom: 90%;
+  }
+}
+
+@media (max-width: 480px) {
+  :root {
+    --clip-right-top: 90%;
+    --clip-angle-top: 8%;
+    --clip-left-bottom: 10%;
+    --clip-angle-bottom: 92%;
+  }
 }
 
 .inria-regular {
